--- a/static/style.css
+++ b/static/style.css
@@ -428,3 +428,12 @@ main {
 .remove-selected:hover {
     background-color: #FAF6E9;
 }
+
+.filter-buttons {
+    margin: 1rem 0;
+}
+.filter-buttons button {
+    margin-right: 10px;
+    padding: 8px 12px;
+    cursor: pointer;
+}
