Restructure, split to page-specific .js files, implement adding/removing favorites on frontpage as well as favorites page

--- a/static/style.css
+++ b/static/style.css
@@ -527,3 +527,11 @@ nav {
     overflow-y: auto;
     padding-right: 0.5rem;
 }
+
+.suggestion-item .fa-star {
+    color: #ccc;
+}
+
+.suggestion-item .fas.fa-star {
+    color: #ffc107;
+}
